default/objects/Order_Loss__c/Order_Loss__c.object-meta.xml
<CustomObject>
    <label>Order Loss</label>
    <nameField>
        <displayFormat>OL-{000000}</displayFormat>
        <label>Order Loss Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Loss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>