default/objects/Order_Loss__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Loss</relationshipLabel>
    <relationshipName>Order_Loss</relationshipName>
    <type>Lookup</type>
</CustomField>