default/objects/Order_Loss__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Order Loss</relationshipLabel>
    <relationshipName>Order_Loss</relationshipName>
    <type>Lookup</type>
</CustomField>