default/objects/Order_Loss__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Order Loss</relationshipLabel>
    <relationshipName>Order_Loss</relationshipName>
    <type>Lookup</type>
</CustomField>